--- a/config.toml
+++ b/config.toml
@@ -58,7 +58,7 @@ disableHugoGeneratorInject = false
   keywords = ""
   images = [""]
 
-  homeSubtitle = "by Nuwa"
+  homeSubtitle = "by Nuwaisir"
 
   # Prefix of link to the git commit detail page. GitInfo must be enabled.
   # gitUrl = ""
